Create a default skeleton task and add task button

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -34,4 +34,17 @@ body {
 .tasks {
   grid-area: 2 / 2 / -1 / -1;
   background-color: var(--secondary);
+  display: flex;
+  padding: 1rem;
+}
+
+.task {
+  background-color: var(--background);
+  height: min-content;
+  padding: 1rem;
+}
+
+.add-task {
+  height: min-content;
+  padding: 1rem;
 }
