--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -62,3 +62,22 @@ body {
 .priority-styling {
   border: 3px solid black;
 }
+
+.note {
+  background-color: var(--background);
+  height: min-content;
+  padding: 1rem;
+}
+
+.note-edit-btn {
+  opacity: 0;
+}
+
+.note:hover .note-edit-btn {
+  opacity: 1;
+}
+
+.add-note-btn {
+  height: min-content;
+  padding: 1rem;
+}
