--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,21 +1,21 @@
 :root {
   --background: #fffffe;
-  --heading: #272343;
-  --text: #2d334a;
-  --primary: #ffd803;
-  --secondary: #e3f6f5;
-  --tertiary: #bae8e8;
+  --text: #0e172c;
+  --primary: #d9d4e7;
+  --secondary: #fec7d7;
+  --tertiary: #a786df;
 }
 
 body {
   background-color: var(--background);
+  color: var(--text);
 }
 
 #content {
   min-height: 100vh;
   display: grid;
   grid-template-rows: 8rem 1fr;
-  grid-template-columns: 10rem 1fr;
+  grid-template-columns: 14rem 1fr;
 }
 
 .hero {
@@ -28,12 +28,13 @@ body {
 
 .taskbar {
   grid-area: 1 / 1 / -1 / 2;
-  background-color: var(--tertiary);
+  background-color: var(--secondary);
+  padding: 1rem;
 }
 
 .tasks {
   grid-area: 2 / 2 / -1 / -1;
-  background-color: var(--secondary);
+  background-color: var(--background);
   display: flex;
   padding: 1rem;
   flex-wrap: wrap;
@@ -41,7 +42,7 @@ body {
 }
 
 .task {
-  background-color: var(--background);
+  background-color: var(--primary);
   height: min-content;
   padding: 1rem;
 }
@@ -80,4 +81,46 @@ body {
 .add-note-btn {
   height: min-content;
   padding: 1rem;
+}
+
+.taskbar {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+}
+
+.general-tasks,
+.projects-todo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+.project-item,
+.notes-btn-container {
+  width: 100%;
+}
+
+.taskbar-btn {
+  appearance: none;
+  width: 100%;
+  border: none;
+  background-color: var(--secondary);
+  padding: 1rem;
+  border-radius: 0.15rem;
+  cursor: pointer;
+  transition: text-shadow 0.3s ease-out;
+  transition: background-color 0.1s ease-out;
+}
+
+.taskbar-btn:hover {
+  background-color: var(--text);
+  color: var(--primary);
+  text-shadow: 0rem 0rem 0.1rem var(--primary);
+}
+
+.add-task {
+  border: 0.2rem solid var(--text);
 }
