--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 #content {
-  min-height: 100vh;
+  height: 100vh;
   display: grid;
   grid-template-rows: 8rem 1fr;
   grid-template-columns: 14rem 1fr;
@@ -39,6 +39,7 @@ body {
   padding: 1rem;
   flex-wrap: wrap;
   gap: 8rem;
+  overflow-y: auto;
 }
 
 .task {
