Make taskbar styling adjustments

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -26,12 +26,6 @@ body {
   font-size: 1.5rem;
 }
 
-.taskbar {
-  grid-area: 1 / 1 / -1 / 2;
-  background-color: var(--secondary);
-  padding: 1rem;
-}
-
 .tasks {
   grid-area: 2 / 2 / -1 / -1;
   background-color: var(--background);
@@ -89,34 +83,40 @@ body {
   flex-direction: column;
   gap: 1rem;
   align-items: center;
+  grid-area: 1 / 1 / -1 / 2;
+  background-color: var(--secondary);
+  padding: 1rem 0 1rem 0;
 }
 
 .general-tasks,
-.projects-todo {
+.projects-todo,
+.project-item,
+.notes-btn-container,
+.add-btn-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
 }
 
-.project-item,
-.notes-btn-container {
-  width: 100%;
-}
-
 .taskbar-btn {
   appearance: none;
-  width: 100%;
+  width: 80%;
   border: none;
   background-color: var(--secondary);
   padding: 1rem;
   border-radius: 0.15rem;
   cursor: pointer;
-  transition: text-shadow 0.3s ease-out;
-  transition: background-color 0.1s ease-out;
+  transition: text-shadow 0.3s ease-out, background-color 0.1s ease-out;
 }
 
 .taskbar-btn:hover {
+  background-color: var(--text);
+  color: var(--primary);
+  text-shadow: 0rem 0rem 0.1rem var(--primary);
+}
+
+.taskbar-btn-activate {
   background-color: var(--text);
   color: var(--primary);
   text-shadow: 0rem 0rem 0.1rem var(--primary);
