--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -107,7 +107,7 @@ body {
   padding: 1rem;
   border-radius: 0.15rem;
   cursor: pointer;
-  transition: text-shadow 0.3s ease-out, background-color 0.1s ease-out;
+  transition: text-shadow 0.2s ease-out, background-color 0.2s ease-out;
 }
 
 .taskbar-btn:hover {
@@ -122,6 +122,7 @@ body {
   text-shadow: 0rem 0rem 0.1rem var(--primary);
 }
 
-.add-task {
+.add-task,
+.add-project-btn {
   border: 0.2rem solid var(--text);
 }
