--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -140,8 +140,11 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 0.2rem;
   padding: 0.4rem 1rem 0.4rem 1rem;
+}
+
+.add-project-btn {
+  margin-bottom: 1rem;
 }
 
 .add-logo {
